--- a/bank/.classpath
+++ b/bank/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Dev/eclipse/lombok.jar">
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/lombok.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
